import { setPreview } from '../../src/utils/preview'
import { readFile } from '../../src/utils/filesystem'
import { defaultConfig } from '../../src/types/config'

const getReadme = (filename: string): string => {
    const content = readFile(defaultConfig, 'tests/fixtures/readme/' + filename)

    console.log(content)

    return setPreview(content, 'Qwerty', defaultConfig.image)
}

test('empty', () => expect(getReadme('empty.md')).toMatchSnapshot())
test('just-text', () => expect(getReadme('just-text.md')).toMatchSnapshot())
test('with-one-image', () => expect(getReadme('with-one-image.md')).toMatchSnapshot())
test('with-one-image-without-header', () => expect(getReadme('with-one-image-without-header.md')).toMatchSnapshot())
test('with-two-images', () => expect(getReadme('with-two-images.md')).toMatchSnapshot())
test('with-two-images-without-header', () => expect(getReadme('with-two-images-without-header.md')).toMatchSnapshot())
test('without-all', () => expect(getReadme('without-all.md')).toMatchSnapshot())
test('without-images', () => expect(getReadme('without-images.md')).toMatchSnapshot())
