// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`empty 1`] = `
"#  $1werty

![](https://banners.beyondco.de/{title}.png/.png?theme=light&pattern=topography&style=style_2&fontSize=100px&images=https%3A%2F%2Flaravel.com%2Fimg%2Flogomark.min.svg&packageManager=npm%2520install&packageName=&description=#gh-light-mode-only)
![](https://banners.beyondco.de/{title}.png/.png?theme=dark&pattern=topography&style=style_2&fontSize=100px&images=https%3A%2F%2Flaravel.com%2Fimg%2Flogomark.min.svg&packageManager=npm%2520install&packageName=&description=#gh-dark-mode-only)

"
`;

exports[`just-text 1`] = `
"#  $1werty

![](https://banners.beyondco.de/{title}.png/.png?theme=light&pattern=topography&style=style_2&fontSize=100px&images=https%3A%2F%2Flaravel.com%2Fimg%2Flogomark.min.svg&packageManager=npm%2520install&packageName=&description=#gh-light-mode-only)
![](https://banners.beyondco.de/{title}.png/.png?theme=dark&pattern=topography&style=style_2&fontSize=100px&images=https%3A%2F%2Flaravel.com%2Fimg%2Flogomark.min.svg&packageManager=npm%2520install&packageName=&description=#gh-dark-mode-only)

Something
"
`;

exports[`with-one-image 1`] = `
"# Preview Updater

![](https://banners.beyondco.de/{title}.png/.png?theme=light&pattern=topography&style=style_2&fontSize=100px&images=https%3A%2F%2Flaravel.com%2Fimg%2Flogomark.min.svg&packageManager=npm%2520install&packageName=&description=#gh-light-mode-only)
![](https://banners.beyondco.de/{title}.png/.png?theme=dark&pattern=topography&style=style_2&fontSize=100px&images=https%3A%2F%2Flaravel.com%2Fimg%2Flogomark.min.svg&packageManager=npm%2520install&packageName=&description=#gh-dark-mode-only)


## Usage

Something
"
`;

exports[`with-one-image-without-header 1`] = `
"#  $1werty

![](https://banners.beyondco.de/{title}.png/.png?theme=light&pattern=topography&style=style_2&fontSize=100px&images=https%3A%2F%2Flaravel.com%2Fimg%2Flogomark.min.svg&packageManager=npm%2520install&packageName=&description=#gh-light-mode-only)
![](https://banners.beyondco.de/{title}.png/.png?theme=dark&pattern=topography&style=style_2&fontSize=100px&images=https%3A%2F%2Flaravel.com%2Fimg%2Flogomark.min.svg&packageManager=npm%2520install&packageName=&description=#gh-dark-mode-only)


## Usage

Something
"
`;

exports[`with-two-images 1`] = `
"# Preview Updater

![](https://banners.beyondco.de/{title}.png/.png?theme=light&pattern=topography&style=style_2&fontSize=100px&images=https%3A%2F%2Flaravel.com%2Fimg%2Flogomark.min.svg&packageManager=npm%2520install&packageName=&description=#gh-light-mode-only)
![](https://banners.beyondco.de/{title}.png/.png?theme=dark&pattern=topography&style=style_2&fontSize=100px&images=https%3A%2F%2Flaravel.com%2Fimg%2Flogomark.min.svg&packageManager=npm%2520install&packageName=&description=#gh-dark-mode-only)


## Usage

Something
"
`;

exports[`with-two-images-without-header 1`] = `
"#  $1werty

![](https://banners.beyondco.de/{title}.png/.png?theme=light&pattern=topography&style=style_2&fontSize=100px&images=https%3A%2F%2Flaravel.com%2Fimg%2Flogomark.min.svg&packageManager=npm%2520install&packageName=&description=#gh-light-mode-only)
![](https://banners.beyondco.de/{title}.png/.png?theme=dark&pattern=topography&style=style_2&fontSize=100px&images=https%3A%2F%2Flaravel.com%2Fimg%2Flogomark.min.svg&packageManager=npm%2520install&packageName=&description=#gh-dark-mode-only)


## Usage

Something
"
`;

exports[`without-all 1`] = `
"#  $1werty

![](https://banners.beyondco.de/{title}.png/.png?theme=light&pattern=topography&style=style_2&fontSize=100px&images=https%3A%2F%2Flaravel.com%2Fimg%2Flogomark.min.svg&packageManager=npm%2520install&packageName=&description=#gh-light-mode-only)
![](https://banners.beyondco.de/{title}.png/.png?theme=dark&pattern=topography&style=style_2&fontSize=100px&images=https%3A%2F%2Flaravel.com%2Fimg%2Flogomark.min.svg&packageManager=npm%2520install&packageName=&description=#gh-dark-mode-only)

## Usage

Something
"
`;

exports[`without-images 1`] = `
"# Preview Updater

![](https://banners.beyondco.de/{title}.png/.png?theme=light&pattern=topography&style=style_2&fontSize=100px&images=https%3A%2F%2Flaravel.com%2Fimg%2Flogomark.min.svg&packageManager=npm%2520install&packageName=&description=#gh-light-mode-only)
![](https://banners.beyondco.de/{title}.png/.png?theme=dark&pattern=topography&style=style_2&fontSize=100px&images=https%3A%2F%2Flaravel.com%2Fimg%2Flogomark.min.svg&packageManager=npm%2520install&packageName=&description=#gh-dark-mode-only)

## Usage

Something
"
`;
